working on stuff

--- a/dev/app/modules/blog/templates/read.html
+++ b/dev/app/modules/blog/templates/read.html
@@ -1,5 +1,5 @@
 <div>
 	<h1><%=data.title %></h1>
-	<p><i>by:</i><%=data.author %></p>
+	<p><i>by:</i><%=data.user %></p>
 	<p><%=data.text %></p>
 </div>
