various changes from a while ago I dont even remmber what

--- a/dev/app/modules/blog/templates/index.html
+++ b/dev/app/modules/blog/templates/index.html
@@ -18,6 +18,10 @@
 		<% }); %>
 
 	</table>
-	<h1>this is the header</h1>
-	<p>asdfasdf</p>
+	<div>
+		<a id="loop" href="#">Loop Code Multiple times</a>
+	</div>
+	<div>
+		<a id="once" href="#">Loop Code Once</a>
+	</div>
 </div>
